modules/eks-karpenter/values/traefik-dashboard.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: int-dashboard
  annotations:
   kubernetes.io/ingress.class: traefik
   # cert-manager.io/cluster-issuer: cert-manager-acme-issuer
  namespace: kube-system
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik-dashboard.happycuban-example.dk`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
  # tls:
  #  secretName: default
